GearsetPOC/force-app/main/default/objects/Account/fields/Add_Dependants__c.field-meta.xml
<CustomField>
    <fullName>Add_Dependants__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Dependants</label>
    <type>Checkbox</type>
</CustomField>