GearsetPOC/force-app/main/default/objects/Account/fields/Address_Populated__c.field-meta.xml
<CustomField>
    <fullName>Address_Populated__c</fullName>
    <formula>IF(
   NOT(ISBLANK(PersonMailingPostalCode)) ||
   NOT(ISBLANK(PersonOtherPostalCode)) ||
   NOT(ISBLANK(ShippingPostalCode)) ||
   NOT(ISBLANK(BillingPostalCode)),
   true,false
)</formula>
    <inlineHelpText>Will be True if any postcode field is filled in on the Customer profile</inlineHelpText>
    <label>Address Populated</label>
    <type>Checkbox</type>
</CustomField>