GearsetPOC/force-app/main/default/objects/Account/fields/Age_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Age_Bracket__c</fullName>
    <description>Customer age bracket</description>
    <label>Age Bracket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>