GearsetPOC/force-app/main/default/objects/Account/fields/Aria_Class__c.field-meta.xml
<CustomField>
    <fullName>Aria_Class__c</fullName>
    <label>Aria Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>