GearsetPOC/force-app/main/default/objects/Account/fields/Aria_CSV_Issued__c.field-meta.xml
<CustomField>
    <fullName>Aria_CSV_Issued__c</fullName>
    <label>Aria CSV Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>