GearsetPOC/force-app/main/default/objects/Account/fields/Aria_CSV_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Aria_CSV_Remaining__c</fullName>
    <description>Field created on Account object because a formula referring to fields on Account and Contact doesn&#39;t work if created on Contact.</description>
    <formula>Aria_CSV_Issued__c - Aria_CSV_Booking_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aria CSV Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>