GearsetPOC/force-app/main/default/objects/Account/fields/Aria_ESV_Issued__c.field-meta.xml
<CustomField>
    <fullName>Aria_ESV_Issued__c</fullName>
    <label>Aria ESV Issued</label>
    <summarizedField>Voucher_yearly_allocation__c.Total_number_of_vouchers_allocated__c</summarizedField>
    <summaryForeignKey>Voucher_yearly_allocation__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>