GearsetPOC/force-app/main/default/objects/Account/fields/Aria_ESV_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Aria_ESV_Remaining__c</fullName>
    <formula>Aria_ESV_Issued__c - Aria_ESV_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aria ESV Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>