GearsetPOC/force-app/main/default/objects/Account/fields/Aria_ESV_Used__c.field-meta.xml
<CustomField>
    <fullName>Aria_ESV_Used__c</fullName>
    <label>Aria ESV Used</label>
    <summarizedField>Staff_and_duty_travel__c.Number_of_Vouchers__c</summarizedField>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Type_of_booking__c</field>
        <operation>equals</operation>
        <value>Pals, Eurostar Staff Voucher</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Overseas Voucher Booking</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_and_duty_travel__c.Associated_account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>