GearsetPOC/force-app/main/default/objects/Account/fields/Aria_PALS_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Aria_PALS_Remaining__c</fullName>
    <description>This field was created on Account and not contact because the formula uses a field from account and a field from contact and it is possible to ccreate a formula on Account using a field from contact on a person account, but it isn&#39;t possible to create a formula in contact using a field from account.</description>
    <formula>PersonContact.Aria_PALS_Issued__c - Aria_PALS_Booking_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aria PALS Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>