GearsetPOC/force-app/main/default/objects/Account/fields/Aria_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Aria_Person_Id__c</fullName>
    <externalId>true</externalId>
    <label>Aria Person Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>