GearsetPOC/force-app/main/default/objects/Account/fields/Aria_TfL_booking_made__c.field-meta.xml
<CustomField>
    <fullName>Aria_TfL_booking_made__c</fullName>
    <description>Sum of the bookings made by TfL staff</description>
    <label>Aria TfL booking made</label>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Type_of_booking__c</field>
        <operation>equals</operation>
        <value>TfL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Status_of_the_booking__c</field>
        <operation>equals</operation>
        <value>Created, Exchanged</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_and_duty_travel__c.Associated_account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>