GearsetPOC/force-app/main/default/objects/Account/fields/Aria_TSV__c.field-meta.xml
<CustomField>
    <fullName>Aria_TSV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aria TSV</label>
    <type>Checkbox</type>
</CustomField>