GearsetPOC/force-app/main/default/objects/Account/fields/Aria_TSV_Issued__c.field-meta.xml
<CustomField>
    <fullName>Aria_TSV_Issued__c</fullName>
    <formula>IF( 
Aria_TSV__c= true  &amp;&amp; YEAR(Aria_Date_of_Employment__pc)&lt;YEAR(DATEVALUE(NOW())),16,

(if(Aria_TSV__c= true  &amp;&amp; Text(CEILING(MONTH(Aria_Date_of_Employment__pc)/3))=&quot;1&quot;,12,
if(Aria_TSV__c= true  &amp;&amp; Text(CEILING(MONTH(Aria_Date_of_Employment__pc)/3))=&quot;2&quot;,8,
if(Aria_TSV__c= true  &amp;&amp; Text(CEILING(MONTH(Aria_Date_of_Employment__pc)/3))=&quot;3&quot;,4,0)

)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aria TSV Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>