GearsetPOC/force-app/main/default/objects/Account/fields/Aria_TSV_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Aria_TSV_Remaining__c</fullName>
    <description>SFDCI-953</description>
    <formula>Aria_TSV_Issued__c-Aria_TSV_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aria TSV Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>