GearsetPOC/force-app/main/default/objects/Account/fields/Aria_TSV_Used__c.field-meta.xml
<CustomField>
    <fullName>Aria_TSV_Used__c</fullName>
    <label>Aria TSV Used</label>
    <summarizedField>Staff_and_duty_travel__c.Number_of_Vouchers__c</summarizedField>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Type_of_booking__c</field>
        <operation>equals</operation>
        <value>Thalys Staff Voucher</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Created_this_year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Staff_and_duty_travel__c.Status_of_the_booking__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_and_duty_travel__c.Associated_account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>