GearsetPOC/force-app/main/default/objects/Account/fields/Average_Booking_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Average_Booking_Horizon__c</fullName>
    <description>Average booking horizon</description>
    <label>Average Booking Horizon</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>