GearsetPOC/force-app/main/default/objects/Account/fields/Average_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_CSAT_Score__c</fullName>
    <label>Average CSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>