GearsetPOC/force-app/main/default/objects/Account/fields/Banned_From_Making_Voucher_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Banned_From_Making_Voucher_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banned From Making Voucher Bookings</label>
    <type>Checkbox</type>
</CustomField>