GearsetPOC/force-app/main/default/objects/Account/fields/Booking_Reference_Insurance_Only__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_Insurance_Only__c</fullName>
    <label>Booking Reference (Insurance Only)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>