GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Adults__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Adults__c</fullName>
    <description>Number of adults bookings</description>
    <label>Bookings Adults</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>