GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Amsterdam__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amsterdam__c</fullName>
    <description>Number of bookings to destination amsterdam</description>
    <label>Bookings Amsterdam</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>