GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_BP__c.field-meta.xml
<CustomField>
    <fullName>Bookings_BP__c</fullName>
    <description>Number of bookings with class of service business premier</description>
    <label>Bookings BP</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>