GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Brussels__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Brussels__c</fullName>
    <description>Number of bookings to destination brussels</description>
    <label>Bookings Brussels</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>