GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Business__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Business__c</fullName>
    <description>Number of Business bookings in last 2 years</description>
    <label>Bookings Business</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>