GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Children__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Children__c</fullName>
    <description>Number of children bookings</description>
    <label>Bookings Children</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>