GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Disney__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Disney__c</fullName>
    <description>Number of bookings to destination disney</description>
    <label>Bookings Disney</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>