GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Family__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Family__c</fullName>
    <description>Number of family bookings</description>
    <label>Bookings Family</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>