GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Leisure__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Leisure__c</fullName>
    <description>Number of Holiday bookings in last 2 years</description>
    <label>Bookings Leisure</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>