GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Lille__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Lille__c</fullName>
    <description>Number of bookings to destination lille</description>
    <label>Bookings Lille</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>