GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Multi_Trip__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Multi_Trip__c</fullName>
    <description>Number of multi-trip bookings</description>
    <label>Bookings Multi Trip</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>