GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Package__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Package__c</fullName>
    <description>Number of package bookings</description>
    <label>Bookings Package</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>