GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Paris__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Paris__c</fullName>
    <description>Number of bookings to destination paris</description>
    <label>Bookings Paris</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>