GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Rotterdam__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Rotterdam__c</fullName>
    <description>Number of bookings to destination rotterdam</description>
    <label>Bookings Rotterdam</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>