GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Seniors__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Seniors__c</fullName>
    <description>Number of seniors bookings</description>
    <label>Bookings Seniors</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>