GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_Ski__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Ski__c</fullName>
    <label>Bookings Ski</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>