GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_South_France__c.field-meta.xml
<CustomField>
    <fullName>Bookings_South_France__c</fullName>
    <description>Number of bookings to destination south_france</description>
    <label>Bookings South France</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>