GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_SP__c.field-meta.xml
<CustomField>
    <fullName>Bookings_SP__c</fullName>
    <description>Number of bookings with class of service standard_premier</description>
    <label>Bookings SP</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>