GearsetPOC/force-app/main/default/objects/Account/fields/Bookings_VFR__c.field-meta.xml
<CustomField>
    <fullName>Bookings_VFR__c</fullName>
    <description>Number of VFR bookings in last 2 years</description>
    <label>Bookings VFR</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>