GearsetPOC/force-app/main/default/objects/Account/fields/Business_travel_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Business_travel_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Travel Opt In</label>
    <type>Checkbox</type>
</CustomField>