GearsetPOC/force-app/main/default/objects/Account/fields/BusinessID_B__c.field-meta.xml
<CustomField>
    <fullName>BusinessID_B__c</fullName>
    <description>Business Registration data</description>
    <label>BusinessID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>