GearsetPOC/force-app/main/default/objects/Account/fields/City_town_B__c.field-meta.xml
<CustomField>
    <fullName>City_town_B__c</fullName>
    <description>Business Registration data</description>
    <label>City / town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>