GearsetPOC/force-app/main/default/objects/Account/fields/Club_Eurostar_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Club_Eurostar_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Club Eurostar Opt In</label>
    <type>Checkbox</type>
</CustomField>