GearsetPOC/force-app/main/default/objects/Account/fields/Company_Address_1_B__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_1_B__c</fullName>
    <description>Business Registration data</description>
    <label>Company Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>