GearsetPOC/force-app/main/default/objects/Account/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Entity</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>