GearsetPOC/force-app/main/default/objects/Account/fields/Company_Registration_No_B__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_No_B__c</fullName>
    <description>Business Registration data</description>
    <label>Company Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>