GearsetPOC/force-app/main/default/objects/Account/fields/Conference_or_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_or_Event_Date__c</fullName>
    <label>Conference or Event Date</label>
    <type>Date</type>
</CustomField>