GearsetPOC/force-app/main/default/objects/Account/fields/Count_Group_Opt__c.field-meta.xml
<CustomField>
    <fullName>Count_Group_Opt__c</fullName>
    <label>Count Group Opt</label>
    <summaryFilterItems>
        <field>Preference__c.Name</field>
        <operation>contains</operation>
        <value>Group Opt in</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Preference__c.DateTimeTo__c</field>
        <operation>equals</operation>
        <value />
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Preference__c.Consent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Preference__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>