GearsetPOC/force-app/main/default/objects/Account/fields/COVID_eVouchers_Emailed__c.field-meta.xml
<CustomField>
    <fullName>COVID_eVouchers_Emailed__c</fullName>
    <formula>IF(Received_COVID_Vouchers__c, Image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; $Setup.Images__c.Email_Sent_Icon__c, &#39;True&#39;, 35,35),
Image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  $Setup.Images__c.Email_Unsent_Icon__c, &#39;False&#39;, 35,35))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COVID eVouchers Emailed</label>
    <type>Text</type>
</CustomField>