GearsetPOC/force-app/main/default/objects/Account/fields/Creation_Channel__c.field-meta.xml
<CustomField>
    <fullName>Creation_Channel__c</fullName>
    <description>This field gets populated once when the online account is initially created. It allows to understand from which parts of the site/apps accounts were created from.</description>
    <label>Creation Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>BPA</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>SNAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>