GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advocacy__c</fullName>
    <label>Customer Advocacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>