GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Customer_Email is email and External ID. Kept in sync with the standard Email field.  The Customer Email will not appear on page layouts, it is for integration matching only.</description>
    <externalId>true</externalId>
    <label>Customer Email_</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>