GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Name_Combined__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Combined__c</fullName>
    <formula>FirstName + &quot; &quot; + LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name (Combined)</label>
    <type>Text</type>
</CustomField>