GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Semgent number 1-7</description>
    <label>Customer Segment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>