GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Segment_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Group__c</fullName>
    <description>SFDC-1759</description>
    <label>Customer Segment Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>