GearsetPOC/force-app/main/default/objects/Account/fields/Customer_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Name__c</fullName>
    <description>SFDC-1759</description>
    <label>Customer Segment Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>