GearsetPOC/force-app/main/default/objects/Account/fields/DB_Running_Total__c.field-meta.xml
<CustomField>
    <fullName>DB_Running_Total__c</fullName>
    <label>DB Running Total</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>