GearsetPOC/force-app/main/default/objects/Account/fields/Delta_Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Delta_Loyalty_Tier__c</fullName>
    <label>Delta Loyalty Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delta_Loyalty_Tier</valueSetName>
    </valueSet>
</CustomField>