GearsetPOC/force-app/main/default/objects/Account/fields/Do_Not_Reopen_Cases_Social__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Reopen_Cases_Social__c</fullName>
    <formula>Facebook_Account__r.Do_Not_Reopen_Cases__c = TRUE
||
 Twitter_Handle_Search__r.Do_Not_Reopen_Cases__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Reopen Cases (Social)</label>
    <type>Checkbox</type>
</CustomField>