GearsetPOC/force-app/main/default/objects/Account/fields/E4A_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>E4A_Customer_Type__c</fullName>
    <label>E4A Company Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Distributor (rail operator)</fullName>
            </value>
            <value>
                <fullName>Distributors (Train operating company)</fullName>
                <isActive>false</isActive>
                <label>Distributors (Train operating company)</label>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Inbounder</fullName>
            </value>
            <value>
                <fullName>Leisure Agent</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Online Travel Agencies (OTA)</fullName>
                <isActive>false</isActive>
                <label>Online Travel Agencies (OTA)</label>
            </value>
            <value>
                <fullName>Online Travel Agent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reward Redemption</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Technical provider</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Travel Management Company</fullName>
                <isActive>false</isActive>
                <label>Travel Management Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>