GearsetPOC/force-app/main/default/objects/Account/fields/E4A_Newsletter_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>E4A_Newsletter_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E4A Subscriber</label>
    <type>Checkbox</type>
</CustomField>