GearsetPOC/force-app/main/default/objects/Account/fields/E4A_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>E4A_Opt_Out_Reason__c</fullName>
    <label>E4A Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I receive too many emails</fullName>
            </value>
            <value>
                <fullName>The emails are not relevant to me</fullName>
            </value>
            <value>
                <fullName>Uninteresting or repetetive content</fullName>
            </value>
            <value>
                <fullName>The format is not easy to read</fullName>
            </value>
            <value>
                <fullName>I can&#39;t properly view the emails</fullName>
            </value>
            <value>
                <fullName>I don&#39;t remember subscribing</fullName>
            </value>
            <value>
                <fullName>Other (please explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>