GearsetPOC/force-app/main/default/objects/Account/fields/E4A_Subscriber_Status__c.field-meta.xml
<CustomField>
    <fullName>E4A_Subscriber_Status__c</fullName>
    <label>E4A Subscriber Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>